# xdccget

./: CMakeLists.txt  Makefile  Makefile.FreeBSD  Makefile.common  Makefile.cygwin  README.md  argument_parser.c  argument_parser.h  config.c  config.h  dirs.c  dirs.h  file.c  file.h  hash_types.h  hashing_algo.c  hashing_algo.h  helper.c  helper.h  sds.c  sds.h  sph_md5.c  sph_md5.h  xdccget.c  xdccget.h
libircclient-include/: hashmap.h  irc_line_parser.h  irc_parser.h  libirc_events.h  libircclient.h  strings_utils.h
libircclient-src/: colors.c  commands.c  commands.h  dcc.c  dcc.h  fd_watcher.c  fd_watcher.h  irc_line_parser.c  irc_parser.c  libircclient.c  params.h  portable.c  portable_endian.h  session.h  sockets.c  ssl.c  test  utils.c
